--- a/roles/common/tasks/security.yml
+++ b/roles/common/tasks/security.yml
@@ -33,6 +33,14 @@
     - dependencies
   when: ansible_distribution_version == '10'
 
+- name: Install fail2ban
+  apt:
+    name: "fail2ban"
+    state: present
+  tags:
+    - dependencies
+  when: ansible_distribution_version == '11'
+
 - name: Copy fail2ban configuration into place
   template: src=etc_fail2ban_jail.local.j2 dest=/etc/fail2ban/jail.local
   notify: restart fail2ban
