--- a/roles/sslletsencrypt/defaults/main.yml
+++ b/roles/sslletsencrypt/defaults/main.yml
@@ -16,6 +16,26 @@ kex_algorithms: "curve25519-sha256@libssh.org,ecdh-sha2-nistp521,ecdh-sha2-nistp
 ciphers: "chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr"
 macs: "hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com"
 
+subdomains:
+  - "{{ server_name }}"
+  - "www"
+  - "mail"
+  - "autoconfig"
+  - "stats"
+  - "news"
+  - "cloud"
+  - "git"
+  - "matrix"
+  - "status"
+  - "social"
+  - "comments"
+  - "iot"
+  - "wiki"
+  - "jitsi"
+  - "kanboard"
+  - "chat"
+  - "users"
+
 # ntp
 ntp_servers:
   - 0.pool.ntp.org
