--- a/roles/iot/tasks/main.yml
+++ b/roles/iot/tasks/main.yml
@@ -2,3 +2,4 @@
 - include: influx.yml tags=iot
 - include: mosquitto.yml tags=iot
 - include: mqtt_admin.yml tags=iot
+- include: nodered.yml tags=iot
