--- a/roles/mailserver/tasks/solr.yml
+++ b/roles/mailserver/tasks/solr.yml
@@ -31,6 +31,7 @@
     dest=/etc/solr/conf/schema.xml
     owner=root
     group=root
+  when: ansible_distribution_version != '11'
 
 - name: Copy tweaked Tomcat config file into place
   copy:
@@ -57,6 +58,7 @@
     owner=root
     group=root
   notify: restart solr
+  when: ansible_distribution_version != '11'
 
 - name: Create Solr index directory
   file:
@@ -75,12 +77,3 @@
     group=tomcat
   notify: restart solr
   when: ansible_distribution_version == '10'
-
-- name: Create Solr index directory
-  file:
-    state=directory
-    path=/data/solr
-    owner=tomcat
-    group=tomcat
-  notify: restart solr
-  when: ansible_distribution_version == '11'
