--- a/roles/common/tasks/postgres.yml
+++ b/roles/common/tasks/postgres.yml
@@ -37,10 +37,18 @@
     - dependencies
   when: ansible_distribution_version == '11'
 
+- name: Copy PostgreSQL configuration into place
+  copy: src=etc_postgresql_11_main_postgresql.conf dest=/etc/postgresql/11/main/postgresql.conf owner=postgres group=postgres mode=0644
+  when: ansible_distribution_version == '10'
+
+- name: Copy PostgreSQL configuration into place
+  copy: src=etc_postgresql_13_main_postgresql.conf dest=/etc/postgresql/13/main/postgresql.conf owner=postgres group=postgres mode=0644
+  when: ansible_distribution_version == '11'
+
+- name: Ensure PostgreSQL is restarted
+  service: name=postgresql state=restarted
+
 - name: Set password for PostgreSQL admin user
   become: true
   become_user: postgres
   postgresql_user: name={{ db_admin_username }} password={{ db_admin_password }} encrypted=yes
-
-- name: Copy PostgreSQL configuration into place
-  copy: src=etc_postgresql_11_main_postgresql.conf dest=/etc/postgresql/11/main/postgresql.conf owner=postgres group=postgres mode=0644
